wrapping issue fixed

--- a/style.scss
+++ b/style.scss
@@ -9,14 +9,14 @@
 :root {
 
     --main_text_color: #2F281E;
-    --button_color: #BCD0E5;
+    --button_color: #f0f3f7;
     --h1_color: #2F281E;
     --p_hero: #544837;
     --second_text: #FF9900;
     --button_header_text_color: #173A56;
     --cursor_purple: #7752BE;
     --icon_heart:#F03E3D;
-    --icon_hourglass: #4DADF7;
+    --icon_hourglass: #d3e3f0;
 
 }
 
@@ -178,6 +178,10 @@ img {
 
 .work_list{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
     
 }
 
@@ -185,8 +189,7 @@ img {
     width: 100%;
     max-width: 25%;
     min-width: 270px;
-    
-}
+ }
 
 .work_content_block p{
     width: 100%;
